--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -1,5 +1,18 @@
-  <h1><%= @title.capitalize %></h1>
-  <% @images.each do |image| %> 
-  <img src='/<%= image %>'>
-<% end %>
 
+  <hr>
+  <a href="/galleries/<%= @gallery.id %>/edit">Edit</a>
+  <form action="/galleries/<%= @gallery.id %>" method="Post"><input type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Delete">  
+  </form>
+  <a href="/galleries/<%= @gallery.id %>/images/new">Add an image</a>
+
+  <% @images.each do |image| %>
+  <p><%= "#{image.name}: #{image.description}" %></p>
+  <img src="<%= image.url %>">
+  <a href="/galleries/<%= @gallery.id %>/images/<%= image.id %>/edit">Edit Image</a>
+  <form action="/galleries/<%= @gallery.id %>/images/<%= image.id %>" method="POST">
+    <input type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="Delete">
+  </form>
+  <hr>
+  <% end %>
