--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,16 @@
 <h1> A photo gallery application</h1>
     <div id="introduction">Below are a list of galleries that contain images of animals.</div>
 <h2>Galleries</h2>
+  <a href="/galleries/new">New Gallery</a>
   <div id="galleries">
       <ul>
-        <li><a href='/galleries/cats'>Cats</a></li>
-        <li><a href='/galleries/dogs'>Dogs</a></li>
-      </ul>
-    </div>
+        <% @galleries.each do |gallery| %>
+         <li>
+          <a href='/galleries/<%= gallery.id %>'>
+            <%= gallery.name %>
+          </a> 
+        </li> 
+        <% end %>
+      </ul>    
+  </div>
 
